name:                aether
version:             0.1.0.0
synopsis:            BitTorrent mainline DHT
-- description:
homepage:            https://github.com/nickspinale/aether.git
license:             MIT
license-file:        LICENSE
author:              Nick Spinale
maintainer:          spinalen@carleton.edu
-- copyright:
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Network.Aether.Types
                       Network.Aether.Core
                       Network.Aether.Flow
                       Network.Aether.Prelude
  -- other-extensions:
  build-depends:       aencode,
                       attoparsec >= 0.10,
                       base >= 4.7,
                       bytestring >= 0.10.2,
                       containers,
                       largeword-lens,
                       lens,
                       network,
                       stm,
                       -- unix-time
                       time
  default-language:    Haskell2010
